card comp add to the CL

--- a/component.html
+++ b/component.html
@@ -967,6 +967,212 @@
             </div>
           </div>
         </section>
+
+        <section class="comp-container">
+          <div class="comp-type">
+            <h2 class="comp-title" id="card">Card</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore
+              quia, inventore delectus ipsum possimus neque eaque odit.
+            </p>
+          </div>
+
+          <div class="comp-type">
+            <h2 class="comp-title">Card</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore
+              quia, inventore delectus ipsum possimus neque eaque odit.
+            </p>
+
+            <div class="comp-demo card">
+              <a href="#" class="ct-basic-card">
+                <img
+                  src="./assests/images/fish.jpg"
+                  alt="fish"
+                  class="ct-card-img"
+                />
+                <div class="ct-product-stats">
+                  <h3>Product name</h3>
+                  <small>Product by Dev</small>
+                  <p class="ct-product-info">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing.
+                  </p>
+                  <div class="ct-card-btns">
+                    <button class="ct-btn ct-gray-bd">ADD TO CART</button>
+                    <button class="ct-btn ct-blue">BUY NOW</button>
+                  </div>
+                </div>
+              </a>
+
+              <a href="#" class="ct-basic-card ct-card-badge-div">
+                <span class="titled-badge ct-violet ct-card-badge">NEW</span>
+                <span class="material-icons ct-card-wish">favorite</span>
+                <img
+                  src="./assests/images/fish.jpg"
+                  alt="fist"
+                  class="ct-card-img"
+                />
+                <div class="ct-product-stats">
+                  <h3>Product name</h3>
+                  <small>Product by Dev</small>
+
+                  <p class="ct-product-info">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing.
+                  </p>
+                  <div class="ct-card-btns">
+                    <button class="ct-btn ct-ebtn ct-addcart">
+                      <span class="material-icons">shopping_cart</span>
+                      ADD TO CART
+                    </button>
+                    <button class="ct-btn ct-ebtn ct-pay">
+                      <span class="material-icons">attach_money</span>
+                      BUY
+                    </button>
+                  </div>
+                </div>
+              </a>
+
+              <a href="#" class="ct-basic-card">
+                <img
+                  src="./assests/images/fish.jpg"
+                  alt="fish"
+                  class="ct-card-img"
+                />
+                <div class="ct-product-stats">
+                  <div class="product-title">
+                    <h3>Product name</h3>
+                    <small>Product by Dev</small>
+                  </div>
+                  <p class="ct-product-info">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Laudantium, blanditiis!
+                  </p>
+                  <div class="ct-card-btns">
+                    <button class="ct-btn ct-gray-bd">ADD TO CART</button>
+                    <button class="ct-btn ct-blue">BUY NOW</button>
+                  </div>
+                </div>
+              </a>
+            </div>
+            <div class="comp-code">
+              <iframe
+                src="https://carbon.now.sh/embed?bg=rgba%2834%2C40%2C49%2C1%29&t=one-dark&wt=sharp&l=htmlmixed&width=434&ds=true&dsyoff=0px&dsblur=0px&wc=true&wa=false&pv=0px&ph=0px&ln=false&fl=1&fm=Inconsolata&fs=11.5px&lh=180%25&si=false&es=2x&wm=false&code=%253Ca%2520href%253D%2522%2523%2522%2520class%253D%2522ct-basic-card%2522%253E%250A%253Cimg%2520src%253D%2522.%252Fassests%252Fimages%252Ffish.jpg%2522%2520alt%253D%2522fish%2522%2520class%253D%2522ct-card-img%2522%252F%253E%250A%253Cdiv%2520class%253D%2522ct-product-stats%2522%253E%2520%253Ch3%253EProduct%2520name%253C%252Fh3%253E%250A%253Csmall%253EProduct%2520by%2520Dev%253C%252Fsmall%253E%2520%253Cp%2520class%253D%2522ct-product-info%2522%253E%250ALorem%2520ipsum%2520dolor%2520sit%252C%2520amet%2520consectetur%2520adipisicing.%253C%252Fp%253E%250A%253Cdiv%2520class%253D%2522ct-card-btns%2522%253E%2520%253Cbutton%2520class%253D%2522ct-btn%2520ct-gray-bd%2522%253E%250AADD%2520TO%2520CART%253C%252Fbutton%253E%250A%253Cbutton%2520class%253D%2522ct-btn%2520ct-blue%2522%253EBUY%2520NOW%253C%252Fbutton%253E%2520%253C%252Fdiv%253E%2520%253C%252Fdiv%253E%250A%253C%252Fa%253E%250A"
+                style="
+                  width: 100%;
+                  height: 268px;
+                  border: 0;
+                  transform: scale(1);
+                  overflow: hidden;
+                "
+                sandbox="allow-scripts allow-same-origin"
+              >
+              </iframe>
+              <iframe
+                src="https://carbon.now.sh/embed?bg=rgba%2834%2C40%2C49%2C1%29&t=one-dark&wt=sharp&l=htmlmixed&width=446.5&ds=true&dsyoff=0px&dsblur=0px&wc=true&wa=false&pv=0px&ph=0px&ln=false&fl=1&fm=Inconsolata&fs=11.5px&lh=180%25&si=false&es=2x&wm=false&code=%253Ca%2520href%253D%2522%2523%2522%2520class%253D%2522ct-basic-card%2520ct-card-badge-div%2522%253E%250A%253Cspan%2520class%253D%2522titled-badge%2520ct-violet%2520ct-card-badge%2522%253ENEW%253C%252Fspan%253E%250A%253Cspan%2520class%253D%2522material-icons%2520ct-card-wish%2522%253Efavorite%253C%252Fspan%253E%250A%253Cimg%2520src%253D%2522image-url%2522%2520alt%253D%2522fist%2522%2520class%253D%2522ct-card-img%2522%252F%253E%250A%253Cdiv%2520class%253D%2522ct-product-stats%2522%253E%2520%253Ch3%253EProduct%2520name%253C%252Fh3%253E%250A%253Csmall%253EProduct%2520by%2520Dev%253C%252Fsmall%253E%2520%253Cp%2520class%253D%2522ct-product-info%2522%253E%250ALorem%2520ipsum%2520dolor%2520sit%2520amet%252C%2520consectetur%2520adipisicing.%2520%253C%252Fp%253E%250A%253Cdiv%2520class%253D%2522ct-card-btns%2522%253E%2520%253Cbutton%2520class%253D%2522ct-btn%2520ct-ebtn%2520ct-addcart%2522%253E%250A%253Cspan%2520class%253D%2522material-icons%2522%253Eshopping_cart%253C%252Fspan%253E%2520%2520ADD%2520TO%2520CART%2520%253C%252Fbutton%253E%250A%253Cbutton%2520class%253D%2522ct-btn%2520ct-ebtn%2520ct-pay%2522%253E%250A%253Cspan%2520class%253D%2522material-icons%2522%253Eattach_money%253C%252Fspan%253E%2520BUY%2520%253C%252Fbutton%253E%2520%253C%252Fdiv%253E%250A%253C%252Fdiv%253E%2520%253C%252Fa%253E%250A"
+                style="
+                  width: 100%;
+                  height: 330px;
+                  border: 0;
+                  transform: scale(1);
+                  overflow: hidden;
+                "
+                sandbox="allow-scripts allow-same-origin"
+              >
+              </iframe>
+
+              <iframe
+                src="https://carbon.now.sh/embed?bg=rgba%2834%2C40%2C49%2C1%29&t=one-dark&wt=sharp&l=htmlmixed&width=446.5&ds=true&dsyoff=0px&dsblur=0px&wc=true&wa=false&pv=0px&ph=0px&ln=false&fl=1&fm=Inconsolata&fs=11.5px&lh=180%25&si=false&es=2x&wm=false&code=%253Ca%2520href%253D%2522%2523%2522%2520class%253D%2522ct-basic-card%2522%253E%2520%250A%253Cimg%2520src%253D%2522image-url%2522%2520alt%253D%2522fish%2522%2520class%253D%2522ct-card-img%2522%252F%253E%250A%253Cdiv%2520class%253D%2522ct-product-stats%2522%253E%2520%253Cdiv%2520class%253D%2522product-title%2522%253E%250A%253Ch3%253EProduct%2520name%253C%252Fh3%253E%2520%253Csmall%253EProduct%2520by%2520Dev%253C%252Fsmall%253E%2520%253C%252Fdiv%253E%250A%253Cp%2520class%253D%2522ct-product-info%2522%253E%2520Lorem%252C%2520ipsum%2520dolor%2520sit%2520amet%2520consectetur%2520adipisicing%2520elitLaudantium%252C%2520blanditiis%21%2520%253C%252Fp%253E%2520%253Cdiv%2520class%253D%2522ct-card-btns%2522%253E%250A%253Cbutton%2520class%253D%2522ct-btn%2520ct-gray-bd%2522%253EADD%2520TO%2520CART%253C%252Fbutton%253E%250A%253Cbutton%2520class%253D%2522ct-btn%2520ct-blue%2522%253EBUY%2520NOW%253C%252Fbutton%253E%2520%253C%252Fdiv%253E%2520%253C%252Fdiv%253E%2520%253C%252Fa%253E%250A"
+                style="
+                  width: 100%;
+                  height: 247px;
+                  border: 0;
+                  transform: scale(1);
+                  overflow: hidden;
+                "
+                sandbox="allow-scripts allow-same-origin"
+              >
+              </iframe>
+            </div>
+          </div>
+
+          <div class="comp-type">
+            <h2 class="comp-title">Horizontal/Text Cards</h2>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime,
+              incidunt. Ea expedita magnam culpa distinctio maiores. Illum quos
+              ab deleniti consequatur beatae laudantium?
+            </p>
+
+            <div class="comp-demo">
+              <a class="ct-horizontal-card ct-card-badge-div">
+                <span class="material-icons ct-card-close">close</span>
+                <img
+                  src="./assests/images/fish.jpg"
+                  alt="product"
+                  class="ct-card-img ct-img-lg"
+                />
+                <div class="ct-product-stats">
+                  <h3>Product name</h3>
+                  <small>Product by Dev</small>
+
+                  <p class="ct-product-info">
+                    Lorem ipsum dolor sit amet consectetur adipisicing.
+                  </p>
+                  <div class="ct-card-btns">
+                    <button class="ct-btn ct-gray-bd">ADD TO CART</button>
+                    <button class="ct-btn">
+                      <span class="material-icons wishlist-btn">favorite</span>
+                      <span class="material-icons share-btn">share</span>
+                    </button>
+                  </div>
+                </div>
+              </a>
+
+              <a class="ct-basic-card text-card">
+                <span class="material-icons ct-card-close">close</span>
+                <div class="text-container">
+                  <h2>Thank you for visiting!</h2>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Fugit quod mollitia explicabo quo iusto
+                  </p>
+                </div>
+                <div class="text-card-btn">
+                  <span class="material-icons wishlist-btn">favorite</span>
+                  <span class="material-icons share-btn">share</span>
+                </div>
+              </a>
+            </div>
+
+            <div class="comp-code">
+              <iframe
+                src="https://carbon.now.sh/embed?bg=rgba%2834%2C40%2C49%2C1%29&t=one-dark&wt=sharp&l=htmlmixed&width=533.5&ds=true&dsyoff=0px&dsblur=0px&wc=true&wa=false&pv=0px&ph=0px&ln=false&fl=1&fm=Inconsolata&fs=11.5px&lh=180%25&si=false&es=2x&wm=false&code=%253Ca%2520class%253D%2522ct-horizontal-card%2520ct-card-badge-div%2522%253E%250A%253Cspan%2520class%253D%2522material-icons%2520ct-card-close%2522%253Eclose%253C%252Fspan%253E%250A%253Cimg%2520src%253D%2522.%252Fassests%252Fimages%252Ffish.jpg%2522%2520alt%253D%2522product%2522%2520%250Aclass%253D%2522ct-card-img%2520ct-img-lg%2522%2520%252F%253E%250A%253Cdiv%2520class%253D%2522ct-product-stats%2522%253E%2520%253Ch3%253EProduct%2520name%253C%252Fh3%253E%250A%253Csmall%253EProduct%2520by%2520Dev%253C%252Fsmall%253E%2520%253Cp%2520class%253D%2522ct-product-info%2522%253E%250ALorem%2520ipsum%2520dolor%2520sit%2520amet%2520consectetur%2520adipisicing.%253C%252Fp%253E%250A%253Cdiv%2520class%253D%2522ct-card-btns%2522%253E%2520%253Cbutton%2520class%253D%2522ct-btn%2520ct-gray-bd%2522%253E%250AADD%2520TO%2520CART%253C%252Fbutton%253E%2520%253Cbutton%2520class%253D%2522ct-btn%2522%253E%2520%250A%253Cspan%2520class%253D%2522material-icons%2520wishlist-btn%2522%253Efavorite%253C%252Fspan%253E%250A%253Cspan%2520class%253D%2522material-icons%2520share-btn%2522%253Eshare%253C%252Fspan%253E%2520%253C%252Fbutton%253E%250A%253C%252Fdiv%253E%2520%253C%252Fdiv%253E%2520%253C%252Fa%253E%250A"
+                style="
+                  width: 100%;
+                  height: 330px;
+                  border: 0;
+                  transform: scale(1);
+                  overflow: hidden;
+                "
+                sandbox="allow-scripts allow-same-origin"
+              >
+              </iframe>
+
+              <iframe
+                src="https://carbon.now.sh/embed?bg=rgba%2834%2C40%2C49%2C1%29&t=one-dark&wt=sharp&l=htmlmixed&width=396.25&ds=true&dsyoff=0px&dsblur=0px&wc=true&wa=false&pv=0px&ph=0px&ln=false&fl=1&fm=Inconsolata&fs=11.5px&lh=180%25&si=false&es=2x&wm=false&code=%253Ca%2520class%253D%2522ct-basic-card%2520text-card%2522%253E%2520%253Cspan%2520class%253D%2522material-icons%2520ct-card-close%2522%253Eclose%253C%252Fspan%253E%2520%253Cdiv%2520class%253D%2522text-container%2522%253E%250A%253Ch2%253EThank%2520you%2520for%2520visiting%21%253C%252Fh2%253E%2520%253Cp%253E%250ALorem%2520ipsum%2520dolor%2520sit%2520amet%2520consectetur%2520adipisicing%2520elit.%250AFugit%2520quod%2520mollitia%2520explicabo%2520quo%2520iusto%2520%253C%252Fp%253E%2520%253C%252Fdiv%253E%250A%253Cdiv%2520class%253D%2522text-card-btn%2522%253E%2520%250A%253Cspan%2520class%253D%2522material-icons%2520wishlist-btn%2522%253Efavorite%253C%252Fspan%253E%250A%253Cspan%2520class%253D%2522material-icons%2520share-btn%2522%253Eshare%253C%252Fspan%253E%2520%253C%252Fdiv%253E%2520%253C%252Fa%253E%250A"
+                style="
+                  width: 100%;
+                  height: 247px;
+                  border: 0;
+                  transform: scale(1);
+                  overflow: hidden;
+                "
+                sandbox="allow-scripts allow-same-origin"
+              >
+              </iframe>
+            </div>
+          </div>
+        </section>
       </section>
     </main>
 
