del href of cards

--- a/component.html
+++ b/component.html
@@ -985,7 +985,7 @@
             </p>
 
             <div class="comp-demo card">
-              <a href="#" class="ct-basic-card">
+              <a class="ct-basic-card">
                 <img
                   src="./assests/images/fish.jpg"
                   alt="fish"
@@ -1004,7 +1004,7 @@
                 </div>
               </a>
 
-              <a href="#" class="ct-basic-card ct-card-badge-div">
+              <a class="ct-basic-card ct-card-badge-div">
                 <span class="titled-badge ct-violet ct-card-badge">NEW</span>
                 <span class="material-icons ct-card-wish">favorite</span>
                 <img
@@ -1032,7 +1032,7 @@
                 </div>
               </a>
 
-              <a href="#" class="ct-basic-card">
+              <a class="ct-basic-card">
                 <img
                   src="./assests/images/fish.jpg"
                   alt="fish"
