--- a/component.html
+++ b/component.html
@@ -555,14 +555,22 @@ Mangalyaan is going live on 5 November 2013. Get ready! &lt;/div&gt;
             <div class="comp-code">
               <pre><code class="html">
 &lt;button class="ct-btn ct-addcart">
-  &lt;span class="material-icons">shopping_cart&lt;/span>ADD TO CART&lt;/button>
+  &lt;span class="material-icons">shopping_cart&lt;/span>
+  ADD TO CART
+&lt;/button>
 &lt;button class="ct-btn ct-wishlist">
-  &lt;span class="material-icons">favorite&lt;/span>WISHLIST&lt;/button> 
+  &lt;span class="material-icons">favorite&lt;/span>
+  WISHLIST
+&lt;/button> 
 &lt;button class="ct-btn ct-pay">
-  &lt;span class="material-icons">attach_money&lt;/span>PAYMENT&lt;/button>
+  &lt;span class="material-icons">attach_money&lt;/span>
+  PAYMENT
+&lt;/button>
 &lt;button class="ct-btn ct-store">
-  &lt;span class="material-icons">store&lt;/span>STORE&lt;/button>
-              </code></pre>
+  &lt;span class="material-icons">store&lt;/span>
+  STORE
+&lt;/button>
+</code></pre>
             </div>
           </div>
 
@@ -586,15 +594,14 @@ Mangalyaan is going live on 5 November 2013. Get ready! &lt;/div&gt;
             <div class="comp-code">
               <pre><code class="html">
 &lt;button class="ct-btn">
-  &lt;span class="material-icons ct-float">search&lt;/span>
-&lt;/button>
-&lt;button class="ct-btn">
-  &lt;span class="material-icons ct-float">add&lt;/span>
+  &lt;span class="material-icons ct-float">search&lt;/span>&lt;/button>
+&lt;button class="ct-btn">&lt;span class="material-icons ct-float">add&lt;/span>
 &lt;/button>
 &lt;button class="ct-btn">
   &lt;span class="material-icons ct-float">save&lt;/span>
 &lt;/button>
-             </code></pre>
+ 
+              </code></pre>
             </div>
           </div>
         </section>
@@ -870,7 +877,7 @@ Mangalyaan is going live on 5 November 2013. Get ready! &lt;/div&gt;
               />
             </div>
 
-            <div class="comp-demo">
+            <div class="comp-code">
               <pre><code class="html">
 &lt;img src="img-url" lass="ct-img-sm" alt="fish"/>
 &lt;img src="img-url" class="ct-img-md" alt="fish"/>
@@ -1081,7 +1088,7 @@ Card on Text overlay
                 <img
                   src="./assests/images/fish.jpg"
                   alt="product"
-                  class="ct-card-img ct-img-lg"
+                  class="ct-card-img ct-img-sm"
                 />
                 <div class="ct-product-stats">
                   <h3>Product name</h3>
