update icon in title

--- a/component.html
+++ b/component.html
@@ -9,7 +9,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.4.0/styles/atom-one-dark-reasonable.min.css"
     />
     <title>CrystalUi</title>
-
+    <link rel="icon" href="./svg/logo.svg" type="image/icon type" />
     <link rel="stylesheet" href="./styles/reset.css" />
     <link rel="stylesheet" href="./styles/navbar.css" />
     <link rel="stylesheet" href="./styles/hero.css" />
