--- a/component.html
+++ b/component.html
@@ -70,6 +70,8 @@
             <li><a class="link" href="#input">Input</a></li>
             <li><a class="link" href="#image">Image</a></li>
             <li><a class="link" href="#card">Card</a></li>
+            <li><a class="link" href="#text-utils">Text Utilities</a></li>
+            <li><a class="link" href="#lists">Lists</a></li>
           </ul>
         </div>
       </section>
@@ -1148,6 +1150,313 @@ Text only card
   &lt;span class="material-icons share-btn">share&lt;/span> &lt;/div>
 &lt;/a>
             </code></pre>
+            </div>
+          </div>
+        </section>
+
+        <section class="comp-container">
+          <div class="comp-type">
+            <h2 class="comp-title" id="text-utils">Text Utilities</h2>
+            <p>
+              Cards are boxes that display content and actions. They should be
+              easy to scan for relevant and actionable information. Elements,
+              like text and images, should be placed on them in a way that
+              clearly indicates hierarchy.
+            </p>
+          </div>
+
+          <div class="comp-type">
+            <h2 class="comp-title">Text Headings</h2>
+            <p>
+              Cards are boxes that display content and actions. They should be
+              easy to scan for
+            </p>
+            <div class="comp-demo">
+              <div class="ct-text-headings">
+                <h6 class="ct-h6">h6. "this" this is a javascript joke</h6>
+                <h5 class="ct-h5">h5. "this" this is a javascript joke</h5>
+                <h4 class="ct-h4">h4. "this" this is a javascript joke</h4>
+                <h3 class="ct-h3">h3. "this" this is a javascript joke</h3>
+                <h2 class="ct-h2">h2. "this" this is a javascript joke</h2>
+                <h1 class="ct-h1">h1. "this" this is a javascript joke</h1>
+              </div>
+            </div>
+            <div class="comp-code">
+              <pre><code class="html">
+&lt;div class="ct-text-headings">
+  &lt;h6 class="ct-h6">h6. "this" this is a javascript joke&lt;/h6>
+  &lt;h5 class="ct-h5">h5. "this" this is a javascript joke&lt;/h5>
+  &lt;h4 class="ct-h4">h4. "this" this is a javascript joke&lt;/h4>
+  &lt;h3 class="ct-h3">h3. "this" this is a javascript joke&lt;/h3>
+  &lt;h2 class="ct-h2">h2. "this" this is a javascript joke&lt;/h2>
+  &lt;h1 class="ct-h1">h1. "this" this is a javascript joke&lt;/h1>
+&lt;/div>
+</code></pre>
+            </div>
+          </div>
+
+          <div class="comp-type">
+            <h2 class="comp-title">Text alignments</h2>
+            <p>
+              Cards are boxes that display content and actions. They should be
+              easy to scan
+            </p>
+
+            <div class="comp-demo">
+              <div class="ct-text-div">
+                <p class="ct-text-start">"this" this is a javascript joke</p>
+
+                <p class="ct-text-center">"this" this is a javascript joke</p>
+
+                <p class="ct-text-end">"this" this is a javascript joke</p>
+              </div>
+            </div>
+
+            <div class="comp-code">
+              <pre><code class="html">
+&lt;p class="ct-text-start">"this" this is a javascript joke&lt;/p>
+&lt;p class="ct-text-center">"this" this is a javascript joke&lt;/p>
+&lt;p class="ct-text-end">"this" this is a javascript joke&lt;/p>
+</code></pre>
+            </div>
+          </div>
+
+          <div class="comp-type">
+            <h2 class="comp-title">Gray Text</h2>
+            <p>
+              Cards are boxes that display content and actions. They should be
+              easy to scan
+            </p>
+
+            <div class="comp-demo">
+              <div class="ct-text-div">
+                <p class="ct-text-gray">"this" this is a javascript joke.</p>
+              </div>
+            </div>
+
+            <div class="comp-code">
+              <pre><code class="html">
+&lt;p class="ct-text-gray">"this" this is a javascript joke.&lt;/p>
+</code></pre>
+            </div>
+          </div>
+        </section>
+
+        <section class="comp-container">
+          <div class="comp-type">
+            <h2 class="comp-title" id="lists">Lists</h2>
+            <p>
+              Cards are boxes that display content and actions. They should be
+              easy to scan for relevant and actionable information.
+            </p>
+          </div>
+
+          <div class="comp-type">
+            <h2 class="comp-title" id="lists">Simple lists</h2>
+            <p>
+              Cards are boxes that display content and actions. They should be
+              easy to scan for relevant and actionable information.
+            </p>
+            <div class="comp-demo">
+              <ul class="ct-ul-list">
+                <li>Item</li>
+                <li>Item</li>
+                <li>Item</li>
+                <li>Item</li>
+              </ul>
+              <ol class="ct-ol-list">
+                <li>Item</li>
+                <li>Item</li>
+                <li>Item</li>
+                <li>Item</li>
+              </ol>
+            </div>
+
+            <div class="comp-code">
+              <pre><code class="html">
+&lt;ul class="ct-ul-list">       
+ &lt;li>Item&lt;/li>            
+ &lt;li>Item&lt;/li>             
+ &lt;li>Item&lt;/li>             
+ &lt;li>Item&lt;/li>             
+&lt;/ul>
+&lt;ol class="ct-ol-list">
+ &lt;li>Item&lt;/li>
+ &lt;li>Item&lt;/li>
+ &lt;li>Item&lt;/li>
+ &lt;li>Item&lt;/li>
+&lt;/ol>
+</code></pre>
+            </div>
+          </div>
+
+          <div class="comp-type">
+            <h2 class="comp-title" id="lists">Icon lists</h2>
+            <p>Cards are boxes that display content and actions.</p>
+            <div class="comp-demo">
+              <ul class="ct-icon-list">
+                <li><span class="material-icons">check_circle</span>Item</li>
+                <li><span class="material-icons">check_circle</span>Item</li>
+                <li><span class="material-icons">check_circle</span>Item</li>
+                <li><span class="material-icons">info</span>Item</li>
+              </ul>
+            </div>
+
+            <div class="comp-code">
+              <pre><code class="html">
+&lt;ul class="ct-icon-list">
+  &lt;li>&lt;span class="material-icons">check_circle&lt;/span>Item&lt;/li>
+  &lt;li>&lt;span class="material-icons">check_circle&lt;/span>Item&lt;/li>
+  &lt;li>&lt;span class="material-icons">check_circle&lt;/span>Item&lt;/li>
+  &lt;li>&lt;span class="material-icons">info&lt;/span>Item&lt;/li>
+&lt;/ul>
+</code></pre>
+            </div>
+          </div>
+
+          <div class="comp-type">
+            <h2 class="comp-title" id="lists">Stacked lists</h2>
+            <p>Cards are boxes that display content and actions.</p>
+            <div class="comp-demo">
+              <ul class="ct-stacked-list">
+                <li>
+                  <img
+                    src="/assests/svg/fallback.svg"
+                    class="ct-round ct-md"
+                    alt=""
+                  />
+                  <div class="ct-list-item">
+                    <h4>User name</h4>
+                    <small>Online</small>
+                  </div>
+                </li>
+                <li>
+                  <img
+                    src="/assests/svg/fallback.svg"
+                    class="ct-round ct-md"
+                    alt=""
+                  />
+                  <div class="ct-list-item">
+                    <h4>User name</h4>
+                    <small>Offline</small>
+                  </div>
+                </li>
+                <li>
+                  <img
+                    src="/assests/svg/fallback.svg"
+                    class="ct-round ct-md"
+                    alt=""
+                  />
+                  <div class="ct-list-item">
+                    <h4>User name</h4>
+                    <small>Online</small>
+                  </div>
+                </li>
+                <li>
+                  <img
+                    src="/assests/svg/fallback.svg"
+                    class="ct-round ct-md"
+                    alt=""
+                  />
+                  <div class="ct-list-item">
+                    <h4>User name</h4>
+                    <small>Online</small>
+                  </div>
+                </li>
+              </ul>
+            </div>
+
+            <div class="comp-code">
+              <pre><code class="html">
+&lt;ul class="ct-stacked-list">
+&lt;li>
+  &lt;img src="img-url" class="ct-round ct-md" alt="fallback"/>
+  &lt;div class="ct-list-item">&lt;h4>User name&lt;/h4>&lt;small>Online&lt;/small>&lt;/div>
+&lt;/li>
+&lt;li>
+  &lt;img src="img-url" class="ct-round ct-md" alt="fallback"/>
+  &lt;div class="ct-list-item">&lt;h4>User name&lt;/h4>&lt;small>Offline&lt;/small>&lt;/div>
+&lt;/li>
+&lt;li>
+  &lt;img src="img-url" class="ct-round ct-md" alt="fallback"/>
+  &lt;div class="ct-list-item">&lt;h4>User name&lt;/h4>&lt;small>Offline&lt;/small>&lt;/div>
+  &lt;/li>
+&lt;li>
+  &lt;img src="img-url" class="ct-round ct-md" alt="fallback"/>
+  &lt;div class="ct-list-item">&lt;h4>User name&lt;/h4>&lt;small>Offline&lt;/small>&lt;/div>
+&lt;/li>
+&lt;/ul>
+</code></pre>
+            </div>
+          </div>
+        </section>
+
+        <section class="comp-container">
+          <div class="comp-type">
+            <h2 class="comp-title" id="nav">Navbar</h2>
+            <p>
+              Cards are boxes that display content and actions. They should be
+              easy to scan for
+            </p>
+          </div>
+
+          <div class="comp-type">
+            <h2 class="comp-title" id="lists">Navbar</h2>
+            <p>
+              Cards are boxes that display content and actions. They should be
+              easy to scan for
+            </p>
+            <div class="comp-demo">
+              <nav class="nav-bar">
+                <div class="ct-nav-logo">
+                  <h1>Navbar</h1>
+                </div>
+                <div class="ct-right-nav">
+                  <div class="nav-searchbar">
+                    <input
+                      type="text"
+                      placeholder="Search..."
+                      class="ct-input"
+                    />
+                    <button class="ct-btn ct-gray">Search</button>
+                  </div>
+                  <div class="ct-nav-user">
+                    <div class="ct-nav-cart">
+                      <div class="basic-badge">
+                        <span class="material-icons"> shopping_cart </span>
+                        <span class="badge-pop ct-blue">4</span>
+                      </div>
+                      Cart
+                    </div>
+                    <div class="ct-nav-signin">
+                      <div class="basic-badge">
+                        <span class="material-icons"> person </span>
+                      </div>
+                      Sign in
+                    </div>
+                  </div>
+                </div>
+              </nav>
+            </div>
+
+            <div class="comp-code">
+              <pre><code class="html">
+&lt;div class="comp-demo">
+  &lt;nav class="nav-bar">
+  &lt;div class="ct-nav-logo"> &lt;h1>Navbar&lt;/h1> &lt;/div>
+    &lt;div class="ct-right-nav"> &lt;div class="nav-searchbar">
+        &lt;input type="text" placeholder="Search..." class="ct-input" />
+        &lt;button class="ct-btn ct-gray">Search&lt;/button>
+    &lt;/div>
+    &lt;div class="ct-nav-user"> &lt;div class="ct-nav-cart"> &lt;div class="basic-badge">
+        &lt;span class="material-icons"> shopping_cart &lt;/span>
+        &lt;span class="badge-pop ct-blue">4&lt;/span>
+  &lt;/div> Cart &lt;/div>
+  &lt;div class="ct-nav-signin"> &lt;div class="basic-badge">
+        &lt;span class="material-icons"> person &lt;/span>
+  &lt;/div> Sign in &lt;/div> &lt;/div> &lt;/div>
+&lt;/nav>
+</code></pre>
             </div>
           </div>
         </section>
